--- a/web/themes/ipu/assets/css/ipu.style.css
+++ b/web/themes/ipu/assets/css/ipu.style.css
@@ -17389,6 +17389,7 @@ a {
 .block--views-block--theme-list-block-1-2 .col {
   padding-top: 4px;
   padding-bottom: 4px;
+  margin-bottom: 10px;
 }
 
 .term-icon a {
