--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -248,7 +248,8 @@ a {
 
 .block--views-block--theme-list-block-1-5,
 .block--views-block--theme-list-block-1,
-.block--views-block--theme-list-block-1-2 {
+.block--views-block--theme-list-block-1-2,
+.viewfield--view__theme_list__block_home_page {
   .views-field-description__value {
     font-weight: 300;
     font-size: $font-size-sm;
