--- a/web/themes/ipu/templates/navigation/menu--mega-menu-top-level.html.twig
+++ b/web/themes/ipu/templates/navigation/menu--mega-menu-top-level.html.twig
@@ -27,13 +27,14 @@
 
 {{ menus.menu_links(items, attributes, 0) }}
 
+
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
     {% if menu_level == 0 %}
-      <ul{{ attributes.addClass('menu') }}>
+      <ul{{ attributes.addClass('menu-top-level') }}>
     {% else %}
-      <ul class="menu">
+      <ul class="menu-top-level">
     {% endif %}
     {% for item in items %}
       {%
@@ -42,6 +43,7 @@
           item.is_expanded ? 'menu-item--expanded',
           item.is_collapsed ? 'menu-item--collapsed',
           item.in_active_trail ? 'menu-item--active-trail',
+          item.system_path ? 'menu-item--route-' ~ item.system_path|clean_class,
         ]
       %}
       <li{{ item.attributes.addClass(classes) }}>
