--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -312,7 +312,7 @@ span::before {
     background: url("../img/theme_icons/global_development.svg");
   }
   .term-icon-231 & {
-    background: url("../img/theme_icons/parliamentary_dialogue.svg");
+    background: url("../img/theme_icons/international_relations.svg");
   }
   .term-icon-139 & {
     background: url("../img/theme_icons/peace_building.svg");
@@ -322,6 +322,9 @@ span::before {
   }
   .term-icon-117 & {
     background: url("../img/theme_icons/youth.svg");
+  }
+  .term-icon-337 & {
+    background: url("../img/theme_icons/parliamentary_dialogue.svg");
   }
 }
 
