--- a/web/themes/ipu/src/sass/navigation/_nav.scss
+++ b/web/themes/ipu/src/sass/navigation/_nav.scss
@@ -166,14 +166,14 @@ ol.breadcrumb {
         background: url(../img/theme_icons/peace_building.svg);
       }
     }
-    &.menu-item--route-node-239 {
+    &.menu-item--route-node-239 { /* Sustainable development */
       a > span:before {
         background: url(../img/theme_icons/global_development.svg);
       }
     }
-    &.menu-item--route-node-xxx {
+    &.menu-item--route-node-241 {
       a > span:before {
-        background: url(../img/theme_icons/parliamentary_dialogue.svg);
+        background: url(../img/theme_icons/international_relations.svg);
       }
     }
     &.menu-item--route-node-242 {
