--- a/web/themes/ipu/templates/field/field--paragraph--carousel.html.twig
+++ b/web/themes/ipu/templates/field/field--paragraph--carousel.html.twig
@@ -27,14 +27,16 @@
                 </div>
             {% endfor %}
         </div>
-        {# Carousel controls are pretty spot on to Bootstrap defaults with the addition of the paragraph id #}
-        <a class="left carousel-control carousel-control-prev" href="#myCarousel-{{ paragraph_id }}" role="button" data-slide="prev">
-            <i class="fas fa-angle-left" aria-hidden="true"></i>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control carousel-control-next" href="#myCarousel-{{ paragraph_id }}" role="button" data-slide="next">
-            <i class="fas fa-angle-right" aria-hidden="true"></i>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-controls">
+            {# Carousel controls are pretty spot on to Bootstrap defaults with the addition of the paragraph id #}
+            <a class="left carousel-control carousel-control-prev" href="#myCarousel-{{ paragraph_id }}" role="button" data-slide="prev">
+                <i class="fas fa-angle-left" aria-hidden="true"></i>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control carousel-control-next" href="#myCarousel-{{ paragraph_id }}" role="button" data-slide="next">
+                <i class="fas fa-angle-right" aria-hidden="true"></i>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
 
 </div>
