Add geopolitical group functionality to basic page, add a view and add this to country templates; add twig tweak and some functionality to templates for background images on highlights/articles.

--- a/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
@@ -27,4 +27,11 @@
             {% endif %}
         </div>
     </div>
+
+</div>
+<div class="in-the-section">
+    <div class="container">
+        <h2>{{ 'In the region'|t }}</h2>
+            {{ content.geogroups }}
+    </div>
 </div>
