Add latest promoted assembly to megamenu

--- a/web/themes/ipu/assets/css/ipu.style.css
+++ b/web/themes/ipu/assets/css/ipu.style.css
@@ -701,7 +701,7 @@ pre code {
 .viewfield--view__sub_content .field-content-section .paragraph--type--sections .field--type-viewfield .views-element-container > div .views-row,
 .field-content-section .paragraph--type--sections .field--type-viewfield .viewfield--view__sub_content .views-element-container > div .views-row,
 .viewfield--view__sub_content .node-article .group-related > div .field__item .views-element-container > div .views-row,
-.node-article .group-related > div .field__item .viewfield--view__sub_content .views-element-container > div .views-row, .field-content-section .paragraph--type--sections .field--type-viewfield .events-card .views-row, .col-md-5, .node-landing_page:not(.node-172) .group-header .landing-page__field-media-image, .col-md-4, .ultimenu__item-1 .ultimenu__flyout .block, .ultimenu__flyout .region-inner .block--ipucontentblock, .in-the-section .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .field-content-section .paragraph--type--sections .field--type-viewfield .views-row, .col-md-3, .page__footer .region-inner > .block, .col-md-2, .col-md-1, .col-sm,
+.node-article .group-related > div .field__item .viewfield--view__sub_content .views-element-container > div .views-row, .field-content-section .paragraph--type--sections .field--type-viewfield .events-card .views-row, .col-md-5, .node-landing_page:not(.node-172) .group-header .landing-page__field-media-image, .col-md-4, .ultimenu__item-2 .ultimenu__flyout .block, .ultimenu__item-1 .ultimenu__flyout .block, .ultimenu__flyout .region-inner .block--ipucontentblock, .in-the-section .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .field-content-section .paragraph--type--sections .field--type-viewfield .views-row, .col-md-3, .page__footer .region-inner > .block, .col-md-2, .col-md-1, .col-sm,
 .col-sm-auto, .col-sm-12, .col-sm-11, .col-sm-10, .col-sm-9, .col-sm-8, .col-sm-7, .col-sm-6, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .col-sm-5, .col-sm-4, .col-sm-3, .col-sm-2, .col-sm-1, .col,
 .col-auto, .col-12, .col-11, .col-10, .col-9, .col-8, .node--type-publication.node--view-mode-highlight .group-content, .col-7, .col-6, .col-5, .col-4, .node--type-publication.node--view-mode-highlight .publication__field-media-image, .col-3, .col-2, .col-1 {
   position: relative;
@@ -1095,7 +1095,7 @@ pre code {
     max-width: 25%;
   }
 
-  .col-md-4, .ultimenu__item-1 .ultimenu__flyout .block, .ultimenu__flyout .region-inner .block--ipucontentblock, .in-the-section .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .field-content-section .paragraph--type--sections .field--type-viewfield .views-row {
+  .col-md-4, .ultimenu__item-2 .ultimenu__flyout .block, .ultimenu__item-1 .ultimenu__flyout .block, .ultimenu__flyout .region-inner .block--ipucontentblock, .in-the-section .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .field-content-section .paragraph--type--sections .field--type-viewfield .views-row {
     flex: 0 0 33.3333333333%;
     max-width: 33.3333333333%;
   }
@@ -21469,6 +21469,7 @@ ol.breadcrumb {
   display: none;
 }
 
+/* Events flyout */
 /* Add 5 card layouts */
 .col-xs-5ths,
 .col-sm-5ths,
